--- a/venus/templates/index.html
+++ b/venus/templates/index.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+
 <!--<h1>Hy yes you </h1>-->
 <!--<h1>Welcome {{name}}</h1>-->
 <!--<h1>Your age is  {{age}}</h1>-->
 <!--<h1>and youre from {{nationality}}</h1>-->
 <h1>Input your text here to find the count</h1>
-<form action="counter" method="POST">
+<form action="counter" method="">
     {% csrf_token %}
-    <textarea name="text" rows="25" cols="80">
+    <textarea name="words" rows="25" cols="80">
 
     </textarea></br>
     <input type="Submit">
 </form>
-</body>
-</html>
